package modal.powerup;


public class BaseMultiplier extends Multiplier {
  @Override
  public long unitPoints() {
    return 1;
  }
}
