package modal.powerup;

public abstract class Multiplier {
  public abstract long unitPoints();
}
