package modal.powerup;

public abstract class PowerUpDecorator extends Multiplier {
  public abstract long unitPoints();
}
