@startuml

title __POWERUP's Class Diagram__\n

  namespace  {
    namespace odal {
      namespace powerup {
        class modal.powerup.BaseMultiplier {
            + unitPoints()
        }
      }
    }
  }
  

  namespace  {
    namespace odal {
      namespace powerup {
        abstract class modal.powerup.Multiplier {
            {abstract} + unitPoints()
        }
      }
    }
  }
  

  namespace  {
    namespace odal {
      namespace powerup {
        class modal.powerup.PowerUpA {
            + PowerUpA()
            + unitPoints()
        }
      }
    }
  }
  

  namespace  {
    namespace odal {
      namespace powerup {
        class modal.powerup.PowerUpB {
            + PowerUpB()
            + unitPoints()
        }
      }
    }
  }
  

  namespace  {
    namespace odal {
      namespace powerup {
        class modal.powerup.PowerUpC {
            + PowerUpC()
            + unitPoints()
        }
      }
    }
  }
  

  namespace  {
    namespace odal {
      namespace powerup {
        abstract class modal.powerup.PowerUpDecorator {
            {abstract} + unitPoints()
        }
      }
    }
  }
  

  modal.powerup.BaseMultiplier -up-|> modal.powerup.Multiplier
  modal.powerup.PowerUpA -up-|> modal.powerup.PowerUpDecorator
  modal.powerup.PowerUpA o-- modal.powerup.Multiplier : multiplier
  modal.powerup.PowerUpB -up-|> modal.powerup.PowerUpDecorator
  modal.powerup.PowerUpB o-- modal.powerup.Multiplier : multiplier
  modal.powerup.PowerUpC -up-|> modal.powerup.PowerUpDecorator
  modal.powerup.PowerUpC o-- modal.powerup.Multiplier : multiplier
  modal.powerup.PowerUpDecorator -up-|> modal.powerup.Multiplier


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
